feat: implemented controller, mapˆ, networking

--- a/src/Eigen-3.3/doc/A05_PortingFrom2To3.dox
+++ b/src/Eigen-3.3/doc/A05_PortingFrom2To3.dox
@@ -263,13 +263,13 @@ The EIGEN_ALIGN_128 macro has been renamed to EIGEN_ALIGN16. Don't be surprised,
 
 The \link TopicPreprocessorDirectivesPerformance EIGEN_DONT_ALIGN \endlink option still exists in Eigen 3, but it has a new cousin: \link TopicPreprocessorDirectivesPerformance  EIGEN_DONT_ALIGN_STATICALLY.\endlink It allows to get rid of all static alignment issues while keeping alignment of dynamic-size heap-allocated arrays. Vectorization of statically allocated arrays is still preserved (unless you define \link TopicPreprocessorDirectivesPerformance EIGEN_UNALIGNED_VECTORIZE \endlink =0), at the cost of unaligned memory stores.
 
-\section AlignedMap Aligned Map objects
+\section AlignedMap Aligned MapGateway objects
 
-A common issue with Eigen 2 was that when mapping an array with Map, there was no way to tell Eigen that your array was aligned. There was a ForceAligned option but it didn't mean that; it was just confusing and has been removed.
+A common issue with Eigen 2 was that when mapping an array with MapGateway, there was no way to tell Eigen that your array was aligned. There was a ForceAligned option but it didn't mean that; it was just confusing and has been removed.
 
-New in Eigen3 is the #Aligned option. See the documentation of class Map. Use it like this:
+New in Eigen3 is the #Aligned option. See the documentation of class MapGateway. Use it like this:
 \code
-Map<Vector4f, Aligned> myMappedVector(some_aligned_array);
+MapGateway<Vector4f, Aligned> myMappedVector(some_aligned_array);
 \endcode
 There also are related convenience static methods, which actually are the preferred way as they take care of such things as constness:
 \code
