--- a/src/Eigen-3.3/doc/B01_Experimental.dox
+++ b/src/Eigen-3.3/doc/B01_Experimental.dox
@@ -30,14 +30,14 @@ The following modules are considered entirely experimental, and we make no firm 
 
 In the Core module, the only classes subject to ABI stability guarantee (meaning that you can use it for data members in your public ABI) is:
 \li Matrix
-\li Map
+\li MapGateway
 
 All other classes offer no ABI guarantee, e.g. the layout of their data can be changed.
 
 The only classes subject to (even partial) API stability guarantee (meaning that you can safely construct and use objects) are:
 \li MatrixBase : partial API stability (see below)
 \li Matrix : full API stability (except for experimental stuff inherited from MatrixBase)
-\li Map : full API stability (except for experimental stuff inherited from MatrixBase)
+\li MapGateway : full API stability (except for experimental stuff inherited from MatrixBase)
 
 All other classes offer no direct API guarantee, e.g. their methods can be changed; however notice that most classes inherit MatrixBase and that this is where most of their API comes from -- so in practice most of the API is stable.
 
