--- a/src/Eigen-3.3/doc/SparseQuickReference.dox
+++ b/src/Eigen-3.3/doc/SparseQuickReference.dox
@@ -260,12 +260,12 @@ A better access to the values of the matrix is done by using the InnerIterator c
 int outerIndexPtr[cols+1];
 int innerIndices[nnz];
 double values[nnz];
-Map<SparseMatrix<double> > sm1(rows,cols,nnz,outerIndexPtr, // read-write
+MapGateway<SparseMatrix<double> > sm1(rows,cols,nnz,outerIndexPtr, // read-write
                                innerIndices,values);
-Map<const SparseMatrix<double> > sm2(...);                  // read-only
+MapGateway<const SparseMatrix<double> > sm2(...);                  // read-only
 \endcode
 </td>
-<td>As for dense matrices, class Map<SparseMatrixType> can be used to see external buffers as an %Eigen's SparseMatrix object. </td>
+<td>As for dense matrices, class MapGateway<SparseMatrixType> can be used to see external buffers as an %Eigen's SparseMatrix object. </td>
 </tr>
 </table>
 */
