--- a/src/Eigen-3.3/doc/TutorialMapClass.dox
+++ b/src/Eigen-3.3/doc/TutorialMapClass.dox
@@ -1,6 +1,6 @@
 namespace Eigen {
 
-/** \eigenManualPage TutorialMapClass Interfacing with raw buffers: the Map class
+/** \eigenManualPage TutorialMapClass Interfacing with raw buffers: the MapGateway class
 
 This page explains how to work with "raw" C/C++ arrays.
 This can be useful in a variety of contexts, particularly when "importing" vectors and matrices from other libraries into %Eigen.
@@ -9,31 +9,31 @@ This can be useful in a variety of contexts, particularly when "importing" vecto
 
 \section TutorialMapIntroduction Introduction
 
-Occasionally you may have a pre-defined array of numbers that you want to use within %Eigen as a vector or matrix. While one option is to make a copy of the data, most commonly you probably want to re-use this memory as an %Eigen type. Fortunately, this is very easy with the Map class.
+Occasionally you may have a pre-defined array of numbers that you want to use within %Eigen as a vector or matrix. While one option is to make a copy of the data, most commonly you probably want to re-use this memory as an %Eigen type. Fortunately, this is very easy with the MapGateway class.
 
-\section TutorialMapTypes Map types and declaring Map variables
+\section TutorialMapTypes MapGateway types and declaring MapGateway variables
 
-A Map object has a type defined by its %Eigen equivalent:
+A MapGateway object has a type defined by its %Eigen equivalent:
 \code
-Map<Matrix<typename Scalar, int RowsAtCompileTime, int ColsAtCompileTime> >
+MapGateway<Matrix<typename Scalar, int RowsAtCompileTime, int ColsAtCompileTime> >
 \endcode
-Note that, in this default case, a Map requires just a single template parameter.  
+Note that, in this default case, a MapGateway requires just a single template parameter.
 
-To construct a Map variable, you need two other pieces of information: a pointer to the region of memory defining the array of coefficients, and the desired shape of the matrix or vector.  For example, to define a matrix of \c float with sizes determined at compile time, you might do the following:
+To construct a MapGateway variable, you need two other pieces of information: a pointer to the region of memory defining the array of coefficients, and the desired shape of the matrix or vector.  For example, to define a matrix of \c float with sizes determined at compile time, you might do the following:
 \code
-Map<MatrixXf> mf(pf,rows,columns);
+MapGateway<MatrixXf> mf(pf,rows,columns);
 \endcode
 where \c pf is a \c float \c * pointing to the array of memory.  A fixed-size read-only vector of integers might be declared as
 \code
-Map<const Vector4i> mi(pi);
+MapGateway<const Vector4i> mi(pi);
 \endcode
 where \c pi is an \c int \c *. In this case the size does not have to be passed to the constructor, because it is already specified by the Matrix/Array type.
 
-Note that Map does not have a default constructor; you \em must pass a pointer to intialize the object. However, you can work around this requirement (see \ref TutorialMapPlacementNew).
+Note that MapGateway does not have a default constructor; you \em must pass a pointer to intialize the object. However, you can work around this requirement (see \ref TutorialMapPlacementNew).
 
-Map is flexible enough to accomodate a variety of different data representations.  There are two other (optional) template parameters:
+MapGateway is flexible enough to accomodate a variety of different data representations.  There are two other (optional) template parameters:
 \code
-Map<typename MatrixType,
+MapGateway<typename MatrixType,
     int MapOptions,
     typename StrideType>
 \endcode
@@ -45,11 +45,11 @@ Map<typename MatrixType,
 <td>\include Tutorial_Map_rowmajor.cpp </td>
 <td>\verbinclude Tutorial_Map_rowmajor.out </td>
 </table>
-However, Stride is even more flexible than this; for details, see the documentation for the Map and Stride classes.
+However, Stride is even more flexible than this; for details, see the documentation for the MapGateway and Stride classes.
 
-\section TutorialMapUsing Using Map variables
+\section TutorialMapUsing Using MapGateway variables
 
-You can use a Map object just like any other %Eigen type:
+You can use a MapGateway object just like any other %Eigen type:
 <table class="example">
 <tr><th>Example:</th><th>Output:</th></tr>
 <tr>
@@ -57,11 +57,11 @@ You can use a Map object just like any other %Eigen type:
 <td>\verbinclude Tutorial_Map_using.out </td>
 </table>
 
-All %Eigen functions are written to accept Map objects just like other %Eigen types. However, when writing your own functions taking %Eigen types, this does \em not happen automatically: a Map type is not identical to its Dense equivalent.  See \ref TopicFunctionTakingEigenTypes for details.
+All %Eigen functions are written to accept MapGateway objects just like other %Eigen types. However, when writing your own functions taking %Eigen types, this does \em not happen automatically: a MapGateway type is not identical to its Dense equivalent.  See \ref TopicFunctionTakingEigenTypes for details.
 
 \section TutorialMapPlacementNew Changing the mapped array
 
-It is possible to change the array of a Map object after declaration, using the C++ "placement new" syntax:
+It is possible to change the array of a MapGateway object after declaration, using the C++ "placement new" syntax:
 <table class="example">
 <tr><th>Example:</th><th>Output:</th></tr>
 <tr>
@@ -70,13 +70,13 @@ It is possible to change the array of a Map object after declaration, using the 
 </table>
 Despite appearances, this does not invoke the memory allocator, because the syntax specifies the location for storing the result.
 
-This syntax makes it possible to declare a Map object without first knowing the mapped array's location in memory:
+This syntax makes it possible to declare a MapGateway object without first knowing the mapped array's location in memory:
 \code
-Map<Matrix3f> A(NULL);  // don't try to use this matrix yet!
+MapGateway<Matrix3f> A(NULL);  // don't try to use this matrix yet!
 VectorXf b(n_matrices);
 for (int i = 0; i < n_matrices; i++)
 {
-  new (&A) Map<Matrix3f>(get_matrix_pointer(i));
+  new (&A) MapGateway<Matrix3f>(get_matrix_pointer(i));
   b(i) = A.trace();
 }
 \endcode
